--- a/product_supplierinfo_for_customer/views/product_views.xml
+++ b/product_supplierinfo_for_customer/views/product_views.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!-- Copyright 2015 AvanzOSC
      Copyright 2015-18 Tecnativa
      Copyright 2017-19 ForgeFlow
@@ -111,18 +110,18 @@
                     name="customer_ids"
                     nolabel="1"
                     context="{
-                           'default_product_tmpl_id': context.get('product_tmpl_id',active_id),
+                           'default_product_tmpl_id': context.get('product_tmpl_id',id),
                            'product_template_invisible_variant': True,
                        }"
-                    attrs="{'invisible': [('product_variant_count','&gt;',1)]}"
+                    invisible="product_variant_count &gt; 1"
                 />
                 <field
                     name="variant_customer_ids"
                     nolabel="1"
                     context="{
-                            'default_product_tmpl_id': context.get('product_tmpl_id',active_id),
+                            'default_product_tmpl_id': context.get('product_tmpl_id',id),
                         }"
-                    attrs="{'invisible': [('product_variant_count','&lt;=',1)]}"
+                    invisible="product_variant_count &lt;= 1"
                 />
             </xpath>
         </field>
