--- a/product_supplierinfo_for_customer/views/product_views.xml
+++ b/product_supplierinfo_for_customer/views/product_views.xml
@@ -126,4 +126,46 @@
             </xpath>
         </field>
     </record>
+    <record id="product_customerinfo_search_view" model="ir.ui.view">
+        <field name="name">product.customerinfo.search.view</field>
+        <field name="model">product.customerinfo</field>
+        <field name="arch" type="xml">
+            <search string="Customer">
+                <field name="partner_id" />
+                <field name="product_tmpl_id" />
+                <field name="product_name" />
+                <field name="product_code" />
+                <filter
+                    string="Active Products"
+                    name="active_products"
+                    domain="['|', ('product_tmpl_id.active', '=', True),('product_id.active', '=', True)]"
+                />
+                <separator />
+                <filter
+                    string="Active"
+                    name="active"
+                    domain="['|', ('date_end', '=', False), ('date_end', '&gt;=',  (context_today() - datetime.timedelta(days=1)).strftime('%Y-%m-%d'))]"
+                />
+                <filter
+                    string="Archived"
+                    name="archived"
+                    domain="[('date_end', '&lt;',  (context_today() - datetime.timedelta(days=1)).strftime('%Y-%m-%d'))]"
+                />
+                <group expand="0" string="Group By">
+                    <filter
+                        string="Product"
+                        name="groupby_product"
+                        domain="[]"
+                        context="{'group_by': 'product_tmpl_id'}"
+                    />
+                    <filter
+                        string="Customer"
+                        name="groupby_customer"
+                        domain="[]"
+                        context="{'group_by': 'partner_id'}"
+                    />
+                </group>
+            </search>
+        </field>
+    </record>
 </odoo>
