[MIG] product_pricelist_direct_print_xlsx: Migration to 17.0

--- a/product_pricelist_direct_print_xlsx/wizards/product_pricelist_print_view.xml
+++ b/product_pricelist_direct_print_xlsx/wizards/product_pricelist_print_view.xml
@@ -25,7 +25,7 @@
                     string="Export"
                     type="object"
                     class="btn-primary"
-                    attrs="{'invisible':[('partner_count', '>', 1)]}"
+                    invisible="partner_count > 1"
                     icon="fa-file-excel-o"
                 />
             </button>
